# AgentOrg

./: .gitignore  README.md  pyproject.toml
.tmp/: quick-task.md
agentorg/: __init__.py  config.py
agentorg/adapters/: executor.py
agentorg/adapters/backends/: claude.py  copilot.py  cursor.py  registry.py
agentorg/adapters/filesystem/: knowledge_store.py  paths.py  persona_repo.py  policy_repo.py  run_store.py  skill_repo.py  team_repo.py
agentorg/adapters/rendering/: jinja_renderer.py
agentorg/cli/: main.py  output.py
agentorg/domain/: budget.py  condense.py  knowledge.py  models.py  persona_parser.py  policy_parser.py  reflection.py  resolution.py  skill_parser.py  team_parser.py
agentorg/ports/: backend.py  executor.py  knowledge_store.py  renderer.py  repository.py  run_store.py
agentorg/services/: build_service.py  org_service.py  project_service.py  reflect_service.py  run_service.py  sync_service.py
agentorg/starters/examples/: repo-plus-personal-extension-example.md  (+7 more)
fleet/: README.md
fleet/docs/: advanced-customization.md  architecture.md  getting-started-project.md  migration-map-from-mydots.md  quickstart.md
fleet/scripts/: generate-run-prompt.sh  new-persona.sh  new-project.sh  new-team.sh  quick-task.sh  resolve-config-order.sh  start-task.sh  validate-team-config.sh
fleet/ux/: config-model.md  product-scope.md
projects/: README.md
tests/: conftest.py
tests/e2e/: test_cli.py  test_exec_loop.py
tests/unit/: test_active_backend.py  test_config_condense.py  test_config_reflection.py  test_reflection_project.py
(+86 files in other folders)
